deployment/chat/overlays/test2/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: chat
spec:
  replicas: 1
