deployment/chat/overlays/test2/chat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat
  namespace: chat
spec:
  rules:
  - host: chat-chat.apps.sgarcia-ocp4-test2.aws.gmbros.net
    http:
      paths:
      - path: /
        backend:
          serviceName: chat
          servicePort: 8080
